se souvenir + changements graphiques

--- a/ESME_eleve/app/src/main/res/layout/activity_main.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_main.xml
@@ -62,8 +62,9 @@
         android:layout_height="0dp"
         android:layout_marginTop="74dp"
         android:adjustViewBounds="true"
+        android:backgroundTint="#0B3849"
         android:scaleType="fitXY"
-        android:src="@drawable/calendrier_fond_bleu"
+        android:src="@drawable/calendar"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/notes_image_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,8 +78,9 @@
         android:layout_marginTop="74dp"
         android:adjustViewBounds="true"
         android:backgroundTint="#0B3849"
+        android:foregroundTint="#FFFFFF"
         android:scaleType="fitXY"
-        android:src="?attr/actionModePasteDrawable"
+        android:src="@drawable/notes"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/calendar_image_button"
@@ -91,9 +93,9 @@
         android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:backgroundTint="#0B3849"
-        android:foreground="?android:attr/actionModeFindDrawable"
         android:foregroundTint="#FBFBFB"
         android:scaleType="fitXY"
+        android:src="@drawable/devoirs"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/moodle_image_button"
         app:layout_constraintStart_toStartOf="parent"
