--- a/ESME_eleve/app/src/main/res/layout/custom_adapter_devoirs.xml
+++ b/ESME_eleve/app/src/main/res/layout/custom_adapter_devoirs.xml
@@ -19,38 +19,39 @@
 
     <TextView
         android:id="@+id/textViewObjet"
-        android:layout_width="170dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
         android:text="Objet"
         android:textColor="#000000"
+        app:layout_constraintEnd_toStartOf="@+id/textViewDateDebut"
         app:layout_constraintStart_toEndOf="@+id/textViewMatiere"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewDateDebut"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:text="Date Début"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewObjet"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewDateFin"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="300dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:text="Date Fin"
         android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDateDebut" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
