--- a/ESME_eleve/app/src/main/res/layout/activity_devoirs.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_devoirs.xml
@@ -69,7 +69,7 @@
         android:id="@+id/textViewTitreIntitule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="125dp"
+        android:layout_marginStart="122dp"
         android:layout_marginTop="6dp"
         android:text="Intitulé"
         android:textColor="#000000"
@@ -94,6 +94,7 @@
         android:id="@+id/RecyclerViewDevoirs"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="2dp"
         android:background="#BEE6F2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
