--- a/ESME_eleve/app/src/main/res/layout/activity_login.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="300dp"
-        android:background="#091450"
+        android:background="#B4091450"
         android:ems="10"
         android:gravity="center|center_horizontal|center_vertical"
         android:hint="  E-Mail"
@@ -31,7 +31,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="5dp"
-        android:background="#091450"
+        android:background="#B5091450"
         android:ems="10"
         android:gravity="center|center_horizontal|center_vertical"
         android:hint="  Password"
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/user_password" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewLogoEsme"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="40dp"
@@ -68,6 +68,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBoxRemember"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:background="#450B2340"
+        android:button="@null"
+        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
+        android:paddingStart="5dp"
+        android:text="Se souvenir de moi"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_login" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
