--- a/ESME_eleve/app/src/main/res/layout/activity_notes.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_notes.xml
@@ -127,6 +127,7 @@
         android:id="@+id/recyclerViewNotes2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="2dp"
         android:background="#BEE6F2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
