--- a/ESME_eleve/app/src/main/res/layout/activity_new_event_cours.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_new_event_cours.xml
@@ -104,6 +104,7 @@
         android:background="@color/blue_esme"
         android:backgroundTint="#000000"
         android:text="Annuler"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
